@@ -424,6 +424,16 @@ org.freedesktop.ModemManager.Device.Control    auth_admin_keep
    </para>
   </section>
 
+  <section>
+   <title>Old KDE Wallpaper After Upgrade</title>
+   <para>
+    If after the update still appears the old 13.1 wallpaper in KDE, we need
+    to remove it from the user cache:
+   </para>
+   
+   <screen>rm ~/.kde4/cache-*/plasma-wallpapers/usr/share/wallpapers/openSUSEdefault/contents/images/*</screen>
+  </section>
+  <section>
 
   <!--
   <section>
